--- a/pppppp/View/UserData/ChangeProfileView.storyboard
+++ b/pppppp/View/UserData/ChangeProfileView.storyboard
@@ -11,7 +11,7 @@
         <!--Change Profile View Controller-->
         <scene sceneID="TBC-0o-7vi">
             <objects>
-                <viewController storyboardIdentifier="ChangeProfileViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hwt-d6-8BX" customClass="ChangeProfileViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="ChangeProfileViewController" storyboardIdentifier="ChangeProfileViewController" id="hwt-d6-8BX" customClass="ChangeProfileViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hpd-ge-4h6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -53,17 +53,6 @@
                                     <action selector="uploadButton:" destination="hwt-d6-8BX" eventType="touchUpInside" id="Z9k-LM-gEo"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AyL-mN-owU">
-                                <rect key="frame" x="16" y="44" width="54.5" height="38"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="xmark.circle" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="back_page1:" destination="hwt-d6-8BX" eventType="touchUpInside" id="uhI-Mf-CDF"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="change your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5xC-7x-6aS">
                                 <rect key="frame" x="32" y="356" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
@@ -95,7 +84,6 @@
                             <constraint firstItem="5xC-7x-6aS" firstAttribute="top" secondItem="Tvi-m3-0rI" secondAttribute="bottom" constant="20" id="8jJ-EH-nUm"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="top" secondItem="5xC-7x-6aS" secondAttribute="bottom" constant="20" id="Bff-sX-fY5"/>
                             <constraint firstItem="3qk-yW-ZCe" firstAttribute="leading" secondItem="Tvi-m3-0rI" secondAttribute="trailing" constant="20" id="J7e-Jy-a6Z"/>
-                            <constraint firstItem="AyL-mN-owU" firstAttribute="top" secondItem="KNT-3O-IY0" secondAttribute="top" id="Sw4-Wl-bvl"/>
                             <constraint firstItem="784-He-p3K" firstAttribute="centerY" secondItem="Tvi-m3-0rI" secondAttribute="centerY" id="VBD-XC-OBE"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="centerX" secondItem="hpd-ge-4h6" secondAttribute="centerX" id="ZD6-Qe-Fvn"/>
                             <constraint firstItem="5xC-7x-6aS" firstAttribute="centerX" secondItem="hpd-ge-4h6" secondAttribute="centerX" id="aCJ-L3-jYW"/>
@@ -103,7 +91,6 @@
                             <constraint firstItem="5xC-7x-6aS" firstAttribute="top" secondItem="3qk-yW-ZCe" secondAttribute="bottom" constant="20" id="fSj-1Z-t0l"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="centerX" secondItem="hpd-ge-4h6" secondAttribute="centerX" id="iCk-Ns-Wf0"/>
                             <constraint firstItem="784-He-p3K" firstAttribute="centerX" secondItem="Tvi-m3-0rI" secondAttribute="centerX" id="ru5-uB-Kuk"/>
-                            <constraint firstItem="AyL-mN-owU" firstAttribute="leading" secondItem="KNT-3O-IY0" secondAttribute="leading" constant="16" id="upw-iK-Tm5"/>
                         </constraints>
                     </view>
                     <connections>
@@ -120,6 +107,5 @@
     </scenes>
     <resources>
         <image name="camera.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
     </resources>
 </document>
