--- a/pppppp/View/AuthView/ResetPasswordView.storyboard
+++ b/pppppp/View/AuthView/ResetPasswordView.storyboard
@@ -19,7 +19,6 @@
                                 <rect key="frame" x="32" y="356" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="350" id="hWG-MA-AWo"/>
                                     <constraint firstAttribute="height" constant="48" id="mHF-K8-5yh"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -30,7 +29,6 @@
                                 <rect key="frame" x="32" y="424" width="350" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="n70-mi-Aaw"/>
-                                    <constraint firstAttribute="width" constant="350" id="vTY-qr-tV9"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
@@ -45,7 +43,11 @@
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="6xT-iV-6tH"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="top" secondItem="rdX-0h-hJ1" secondAttribute="bottom" constant="20" id="Asz-R9-9Lo"/>
                             <constraint firstItem="rdX-0h-hJ1" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="KdA-BA-YxD"/>
+                            <constraint firstItem="5dY-Al-by7" firstAttribute="trailing" secondItem="rdX-0h-hJ1" secondAttribute="trailing" constant="32" id="PHL-6E-D1b"/>
+                            <constraint firstItem="5dY-Al-by7" firstAttribute="trailing" secondItem="6p8-Fq-Qnm" secondAttribute="trailing" constant="32" id="lcx-np-3SB"/>
+                            <constraint firstItem="rdX-0h-hJ1" firstAttribute="leading" secondItem="5dY-Al-by7" secondAttribute="leading" constant="32" id="sH6-lt-PVw"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="centerY" secondItem="tXh-6h-Yed" secondAttribute="centerY" id="tdG-8r-JO5"/>
+                            <constraint firstItem="6p8-Fq-Qnm" firstAttribute="leading" secondItem="5dY-Al-by7" secondAttribute="leading" constant="32" id="xLY-uV-62T"/>
                         </constraints>
                     </view>
                     <connections>
